# raiplaysound-cli

./: .gitignore  .raiplaysound-cli.conf.example  .raiplaysound-downloader.conf.example  AGENTS.md  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml  raiplaysound-cli.sh  raiplaysound-podcast.sh
docs/: COMMAND_BEHAVIOR.md  DEVELOPER_NOTES.md  TESTING.md
docs/audits/: list-seasons-validation-report.md  list-seasons-validation-summary.json  program-grouping-audit.csv  program-grouping-audit.json  program-grouping-report.md  program-grouping-summary.json
docs/prompts/: codex-program-grouping-implementation.md
launchagent/: com.raiplaysound-cli.daily-sync.plist
launcher/: launcher_support.py  raiplaysound-cli  raiplaysound-cli-daily-sync
src/raiplaysound_cli/: __init__.py  catalog.py  cli.py  config.py  daily_sync.py  downloads.py  episodes.py  errors.py  models.py  outputs.py  repair.py  runtime.py  search.py
tests/: test_cli_entrypoints.py  test_cli_utils.py  test_daily_sync.py  test_discovery.py  test_downloads.py  test_launcher.py  test_outputs.py  test_repair.py  test_runtime.py  test_search.py
tools/: audit_program_groupings.py
