[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raiplaysound-cli"
version = "2.0.0"
description = "Python CLI for RaiPlaySound program discovery and episode downloads"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Marco Massari Calderone" }
]
dependencies = [
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[project.scripts]
raiplaysound-cli = "raiplaysound_cli.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
